# raptor-search

./: .env  Cargo.toml  Dockerfile  fly.toml  index.html  robots.txt  script.js  service.db  sitemap.xml  style.css
.github/workflows/: ci.yml  crawler.yml
migrations/: 002_algorithm_upgrade.sql
public/: sitemap.xml
src/: crawl.rs  db.rs  main.rs  service.db
src/algorithm/: extract.rs  metadata.rs  mod.rs  rank.rs  sitelinks.rs  tokenize.rs
static/: app.js  index.html  script.js  style.css
