[package]
name = "service-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
scraper = "0.20"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.7", features = ["cors", "fs"] }
serde = "1.0.228"
serde_json = "1.0.150"
tantivy = "0.26.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
