[package]
name = "service-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
ego-tree = "0.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tower-http = { version = "0.7", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
dotenvy = "0.15"
zstd = "0.13"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-credential-types = "1"
once_cell = "1.20"
rust-stemmers = "1.2"
bytes = "1"
